# workflow-orchestration-queue-bravo20

./: .ai-repository-summary.md  .assembled-orchestrator-prompt.md  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  workflow-orchestration-queue-bravo20.code-workspace
.agents/skills/forensic-analysis-report/: SKILL.md
.agents/skills/orchestration-run-analysis/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: python-ci.yml
debrief-and-document/: debrief-report.md  trace.md
docs/: local-orchestration-quickstart.md  new_features.md
docs/.archived/: implementation-plan.md  non-idle-failure-forensics.md  pr-approval-merge-plan.md  prompt-refactor-analysis.md  zulu48-fix-plan.md
docs/api/: README.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  architecture.md  interactive-report.html  tech-stack.md
src/: __init__.py  notifier_service.py  orchestrator_sentinel.py
src/models/: __init__.py  github_events.py  work_item.py
src/queue/: __init__.py  github_queue.py
src/utils/: __init__.py  secret_scrubber.py
test/: test-opencode-run.sh
tests/: conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_secret_scrubber.py  test_work_item.py
